// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardActions matches snapshot when only the comments count should be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card__actions"
    >
      <div
        class="mdc-card__action-buttons"
      >
        <button
          class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
        >
          <span
            class="mdc-button__ripple"
          />
          <i
            aria-hidden="true"
            class="material-icons mdc-button__icon"
          >
            comment
          </i>
          <span
            class="mdc-button__label"
          >
            1
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CardActions matches snapshot when only the post author should be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card__actions"
    >
      <div
        class="mdc-card__action-buttons"
      >
        <button
          class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
        >
          <span
            class="mdc-button__ripple"
          />
          <i
            aria-hidden="true"
            class="material-icons mdc-button__icon"
          >
            face
          </i>
          <span
            class="mdc-button__label"
          >
            Test user
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CardActions matches snapshot when the comments count is more than one 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              2
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card__actions"
    >
      <div
        class="mdc-card__action-buttons"
      >
        <button
          class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
        >
          <span
            class="mdc-button__ripple"
          />
          <i
            aria-hidden="true"
            class="material-icons mdc-button__icon"
          >
            face
          </i>
          <span
            class="mdc-button__label"
          >
            Test user
          </span>
        </button>
        <button
          class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
        >
          <span
            class="mdc-button__ripple"
          />
          <i
            aria-hidden="true"
            class="material-icons mdc-button__icon"
          >
            comment
          </i>
          <span
            class="mdc-button__label"
          >
            2
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CardActions matches snapshot when the comments count is zero 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              0
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card__actions"
    >
      <div
        class="mdc-card__action-buttons"
      >
        <button
          class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
        >
          <span
            class="mdc-button__ripple"
          />
          <i
            aria-hidden="true"
            class="material-icons mdc-button__icon"
          >
            face
          </i>
          <span
            class="mdc-button__label"
          >
            Test user
          </span>
        </button>
        <button
          class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
        >
          <span
            class="mdc-button__ripple"
          />
          <i
            aria-hidden="true"
            class="material-icons mdc-button__icon"
          >
            comment
          </i>
          <span
            class="mdc-button__label"
          >
            0
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CardActions matches snapshot when the post author and comments count should be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card__actions"
    >
      <div
        class="mdc-card__action-buttons"
      >
        <button
          class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
        >
          <span
            class="mdc-button__ripple"
          />
          <i
            aria-hidden="true"
            class="material-icons mdc-button__icon"
          >
            face
          </i>
          <span
            class="mdc-button__label"
          >
            Test user
          </span>
        </button>
        <button
          class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
        >
          <span
            class="mdc-button__ripple"
          />
          <i
            aria-hidden="true"
            class="material-icons mdc-button__icon"
          >
            comment
          </i>
          <span
            class="mdc-button__label"
          >
            1
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CardActions matches snapshot when the post author and comments count should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card__actions"
    >
      <div
        class="mdc-card__action-buttons"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
